--- a/README.org
+++ b/README.org
@@ -1,11 +1,21 @@
-#+title: emacs-atcoder-tools
+#+TITLE: emacs-atcoder-tools
 
-Compile and test your solution for an AtCoder contest problem, from Emacs.
+Test your solution for an AtCoder's contest task from Emacs.
 
 ** Requirements
    - Emacs 26 or higher
    - [[https://github.com/kyuridenamida/atcoder-tools][atcoder-tools]]
 
 ** Usage
-   - Run =atcoder-tools gen <contest_id>= to fetch metadata and test cases.
-   - Run =M-x atcoder-tools-test= on Emacs to test your solution using atcoder-tools.
+   1. Run =atcoder-tools gen <contest_id>= in your shell to fetch metadata and test cases:
+
+      #+BEGIN_SRC sh
+        atcoder-tools gen abc123
+      #+END_SRC
+
+   2. Run =M-x atcoder-tools-test= on Emacs to test your solution using atcoder-tools.
+
+** Customization
+   | Variable                        | Default value | Description                                      |
+   |---------------------------------+---------------+--------------------------------------------------|
+   | =atcoder-tools-rust-use-rustup= | =t=           | If non-nil, Rustup is used to compile Rust code. |
